--- a/src/main/webapp/bundles/health_v2/less/variables.less
+++ b/src/main/webapp/bundles/health_v2/less/variables.less
@@ -57,6 +57,18 @@
 @health-benefits-icon-border-checked-color: darken(@health-benefits-icon-border-color, 12%);
 @health-benefits-icon-more-border-color:#162F8A;
 
+//== BENEFITS HEALTH redesign v2349234789
+//
+//##
+@btn-benefit-category-bg-color: #FFF;
+@btn-benefit-category-color: #1c3e93;
+// active
+@btn-benefit-category-active-bg-color: #1c3e93;
+@btn-benefit-category-active-color: #FFF;
+// borders
+@btn-benefit-category-border-color: @btn-benefit-category-color;
+// disabled icon color
+@health-benefits-icon-disabled-color: #8A8A8A;
 
 // Health conventions colour style overrides
 
